<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pa.adrian.desarrollandoaplicacion.MainActivity"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        android:layout_marginTop="@dimen/altura"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/teNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:maxLength="30"
            />

    </android.support.design.widget.TextInputLayout>



    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccion_fecha"
        android:textSize="@dimen/tamaño_fecha"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="@dimen/altura"
        android:paddingRight="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tilNombre"
        />



    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/altura"
        android:paddingRight="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        android:layout_below="@+id/tvDate"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/teTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:maxLength="9"
            />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/altura"
        android:paddingRight="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        android:layout_below="@+id/tilTelefono"
        >


        <android.support.design.widget.TextInputEditText
            android:id="@+id/teEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/altura"
        android:paddingRight="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        android:layout_below="@+id/tilEmail"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/teDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:maxLines="4"
            android:inputType="textMultiLine"
            android:maxLength="100"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton"
        android:theme="@style/MiBoton"
        android:layout_alignParentBottom="true"
     />

</RelativeLayout>
